static/css/style.css
/* ... */
#rtl .warning .img-container {
  text-align: left;
  margin: 10px 20px 10px 0;
}

.warning p {
  flex-grow: 1;
  font-size: 1.0rem;
  margin: 20px 20px 20px 10px;
  text-align: left;
}

#rtl .warning p {
  margin: 20px 10px 20px 20px;
  text-align: right;
}

.header-section {
  background-color: #f7f9fb;
}

.header-section h1 {
  font-weight: 200;
}

footer,
section {
  position: relative;
  z-index: 0;
}

nav {
  z-index: 9;
}

main.landing-page,
main.team-page {
  position: relative;
  background-color: #2e3f53;
}

.background-wrapper {
  position: relative;
}

.particles-container {
  position: absolute;
  height: 100%;
  width: 100%;
}

.particles-container svg .dot {
  z-index: 2;
}

.particles-container svg .node {
  z-index: 1;
}

#rtl .ml-auto,
#rtl .mx-auto {
  /* override Bootstrap _spacing.scss:46 */
  margin-left: 0px !important;
  margin-right: auto;
}

.navbar-origin {
  position: relative;
  padding-bottom: 40px;
  padding-top: 20px;
}

.navbar-origin .brand-container {
  flex-grow: 1;
}

.navbar-origin .logo-container {
  width: 100px;
}

.navbar-origin .mobile-background {
  position: absolute;
  height: calc(100% - 20px - 40px - 20px - 35px);
  left: 0px;
  top: 75px;
  width: 100%;
  z-index: 2;
}

.navbar-dark .mobile-background {
  background-color: #111d28;
}

.navbar-light .mobile-background {
  background-color: #dfe6ea;
}

.navbar-origin .nav-item {
  font-size: 0.875rem;
  font-weight: 400;
}

.navbar-origin .brand-container .navbar-brand {
  padding-top: 0px;
}

.navbar-light {
  background-color: #f7f9fb;
}

.navbar-origin .navbar-collapse {
  margin: 20px -30px 0px;
  padding: 0px 30px;
  z-index: 3;
}

.navbar-origin .navbar-collapse.obscured {
  height: 0px;
  margin: 0px;
  padding: 0px;
}

#rtl .navbar-origin .navbar-collapse .navbar-nav {
  padding-right: 15px;
}

#ltr .navbar-origin .navbar-collapse .col-6 {
  padding-left: 0px;
}

#rtl .navbar-origin .navbar-collapse .col-6 {
  padding-right: 0px;
}

.navbar-origin .navbar-collapse .col-6:nth-of-type(1),
.navbar-origin .navbar-collapse .col-6:nth-of-type(2),
.navbar-origin .navbar-collapse .nav-item:nth-of-type(1) {
  padding-top: 20px;
}

.navbar-origin .navbar-collapse .col-6:nth-last-of-type(1),
.navbar-origin .navbar-collapse .nav-item:nth-last-of-type(2) {
  padding-bottom: 20px;
}

.navbar-origin .navbar-collapse .col-6 .nav-link {
  font-size: 0.875rem;
  font-weight: 400;
  padding-left: 0px;
}

.navbar-origin .navbar-collapse .col-6 .nav-link:active,
.navbar-origin .navbar-collapse .col-6 .nav-link:hover,
.navbar-origin .navbar-collapse .col-6 .nav-link.selected {
  opacity: 0.75;
}

.navbar-origin .navbar-collapse .nav-item {
  padding: 0px;
}

.navbar-origin .navbar-collapse .nav-item.dropdown {
  padding: 0px;
}

.navbar-toggler {
  cursor: pointer;
  height: 30px;
  width: 44px;
}

.navbar-origin .navbar-toggler .close-icon {
  display: none;
  margin-bottom: 2px;
}

.navbar-origin .navbar-toggler .globe-icon {
  margin-bottom: 2px;
}

.navbar-origin .navbar-toggler .menu-icon {
  margin-bottom: 3px;
}

.navbar-dark .navbar-toggler,
.navbar-light .navbar-toggler {
  border-width: 0;
}

.navbar-dark .nav-item .nav-link,
.navbar-dark .navbar-collapse .col-6 .nav-link,
.navbar-dark .navbar-toggler i {
  color: #ffffff;
}

.navbar-dark .navbar-toggler i:active,
.navbar-dark .navbar-toggler i:hover {
  color: #dfe6ea;
}

.navbar-light .nav-item .nav-link,
.navbar-light .navbar-collapse .col-6 .nav-link {
  color: #111d28;
}

.navbar-light .navbar-toggler i {
  color: #98a7b4;
}

.navbar-light .navbar-collapse .col-6 .nav-link:active,
.navbar-light .navbar-collapse .col-6 .nav-link:hover,
.navbar-light .navbar-toggler i:active,
.navbar-light .navbar-toggler i:hover,
.navbar-light .nav-item .nav-link:active,
.navbar-light .nav-item .nav-link:hover {
  color: rgba(0, 0, 0, .7);
}

#rtl .dropdown-toggle::after {
  margin: 0 0.255em 0 0;
}

.dropdown-menu {
  z-index: 100000;
  background-color: #ebf0f3;
}

.language .dropdown-item  {
  text-transform: capitalize;
  width: 100%;
  display: block;
  padding: .25rem 1.5rem;
  color: #007bff;
}

.language .dropdown-item:hover {
  background-color: #007bff;
  color: #ffffff;
}

.language .dropdown-item-selected {
  text-transform: capitalize;
  width: 100%;
  color: black;
  padding: .25rem 1.5rem;
}

.row-pane {
  margin-left: 0px;
  margin-right: 0px;
}

.container-panes {
  position: relative;
}

.col-pane {
  padding-left: 0px;
  padding-right: 0px;
}

.background-panes {
  position: absolute;
}

.background-panes .row-pane:not(:first-of-type) {
  height: 100%;
}

.background-panes.bottom-panes {
  bottom: 0px;
  display: flex;
  flex: 1;
  left: 0px;
}

.background-panes.bottom-panes > .align-items-end {
  flex: 1;
}

.foreground-content {
  position: relative;
  z-index: 100;
}

.core-team-bottom-pane,
.platform-bottom-pane {
  background-color: #ffffff;
  flex: 1;
}

.left-upper-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 0 0);
  clip-path: polygon(0 100%, 100% 0, 0 0);
  padding-top: 57.735026918%;
}

.right-upper-pane {
  -webkit-clip-path: polygon(100% 0, 0 0, 100% 100%);
  clip-path: polygon(100% 0, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

.left-lower-pane {
  -webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);
  clip-path: polygon(0 100%, 0 0, 100% 100%);
  padding-top: 57.735026918%;
}

.right-lower-pane {
  -webkit-clip-path: polygon(0 100%, 100% 0, 100% 100%);
  clip-path: polygon(0 100%, 100% 0, 100% 100%);
  padding-top: 57.735026918%;
}

.indented {
  border: 1px solid #dee0e2;
}

#ltr .indented {
  border-width: 0px 0px 0px 1px;
  padding: 0px 0px 0px 20px;
}

#rtl .indented {
  border-width: 0px 1px 0px 0px;
  padding: 0px 20px 0px 0px;
}
/* ... */

